--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@testing-library/user-event": "^13.5.0",
     "@vercel/analytics": "^1.5.0",
     "aos": "^2.3.4",
+    "canvas-confetti": "^1.9.3",
     "eslint-config-react-app": "^7.0.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
