--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "eslint-config-react-app": "^7.0.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-responsive-carousel": "^3.2.23",
     "react-router-dom": "^6.27.0",
     "web-vitals": "^2.1.4",
     "yocto-queue": "^1.2.0"
